feat(trade): 更新主线板块个股数据结构并优化交易界面
- 在BaseBlockRelaStockMapper.xml中扩展区块和股票查询字段
- 为区块实体添加路径、父级、层级等相关属性
- 为股票实体添加类型及市场数据字段
- 重构BlockKlineFun中的价格计算逻辑
- 将前端界面中的"人选"标签统一更改为"精选"
- 优化主线板块和个股的手动筛选功能
- 修复页面刷新时的数据加载问题
- 更新顶部个股手动列表的股票类型筛选逻辑